<resources>
    <string name="app_name">Crypto Places</string>

    <!-- SplashScreenActivity.java -->

    <!-- Layout activity_splash_screen.xml -->
    <string name="app_name_splash_screen">Crypto Places</string>
    <string name="thanks_to_name_splash_screen">Gracias a:</string>


    <!-- LoginActivity.java -->
    <string name="Input_Error_field_empty">Este campo NO puede estar vacío</string>
    <string name="Input_Error_email1">Correo NO válido</string>

    <string name="Input_Error_contraseña1">Contraseña demasiado corta, al menos 8 caracteres</string>
    <string name="Input_Error_contraseña2">Contraseña demasiado larga, hasta 20 caracteres</string>
    <string name="Input_Error_contraseña3">La contraseña debe contener mayúsculas, minúsculas y cifras</string>

    <string name="Input_Error_fields">Datos introducidos NO válidos.</string>

    <string name="title_alertdialog1">ERROR AUTENTICACIÓN</string>
    <string name="msg_alertdialog1">Se ha producido un error autenticando al usuario</string>
    <string name="title_alertdialog2">CIERRE DE SESIÓN</string>
    <string name="msg_alertdialog2">Se ha cerrado la sesión</string>
    <string name="title_alertdialog3">NO HAY CONEXIÓN A INTERNET</string>
    <string name="msg_alertdialog3">Comprueba la conexión a internet</string>
    <string name="neutral_btn_alertdialog">Reintentar</string>

    title_alertdialog_subir_favs


    <!-- Layout activity_login.xml -->
    <string name="login_activity_title">AUTENTICACIÓN</string>
    <string name="hint_correo">Introduce tu correo</string>
    <string name="hint_contraseña">Introduce tu contraseña</string>
    <string name="BTN_registrar">REGISTRAR</string>
    <string name="BTN_acceder">ACCEDER</string>
    <string name="title_activity_google_maps">GoogleMapsActivity</string>
    <string name="BTN_reset_login">¿Olvidaste la contraseña?</string>


    <!-- GoogleMapActivity.java -->
    <string name="CATEGORIA1">cajero</string>
    <string name="CATEGORIA2">cafetería</string>
    <string name="CATEGORIA3">tienda de comestibles</string>
    <string name="CATEGORIA4">sin categoría</string>
    <string name="CATEGORIA5">tiendas</string>
    <string name="CATEGORIA6">alojamiento</string>
    <string name="CATEGORIA7">club nocturno</string>
    <string name="CATEGORIA8">atracción</string>
    <string name="CATEGORIA9">comida</string>
    <string name="CATEGORIA10">transporte</string>
    <string name="CATEGORIA11">deportes</string>
    <string name="CATEGORIA12">minorista trezor</string>
    <string name="CATEGORIA13">agencia de viajes</string>
    <string name="CATEGORIA14">negocio educativo</string>
    <string name="CATEGORIA15">servicios</string>
    <string name="CATEGORIA16">venta minorista</string>

    <string name="title_alertdialog_aboutus">Acerca de\ </string>
    <string name="msg_alertdialog_aboutus">La aplicación permite encontrar comercios que aceptan criptomonedas como forma de pago, usando los mapas de Google y gracias a la API de Coinmap.org\n\nAplicación codificada y diseñada por: Andrés Goicoechea Enrique</string>
    <string name="btn_alertdialog_aboutus">Entendido</string>
    <string name="exit_app">Aplicación cerrada</string>
    <string name="hint_searchview_name">Buscar lugar por nombre</string>

    <string name="title_alertdialog_activate_location">Activar localización</string>
    <string name="msg_alertdialog_activate_location">La localización esta \'Desactivada\'.\nPor favor, active la localización para usar la app</string>
    <string name="btn_positive_alertdialog_activate_location">Configuración de ubicación</string>
    <string name="btn_negative_alertdialog_activate_location">Cancelar</string>
    <string name="toast_negative_alertdialog_activate_location">No se activo la localización</string>

    <string name="title_alertdialog_subir_favs">Subir favoritos a la nube</string>
    <string name="msg_alertdialog_subir_favs">Se va ha ELIMINAR y sustituir la lista de favoritos de la nube.\n¿Está seguro?</string>
    <string name="btn_positive_alertdialog_subir_favs">Si</string>
    <string name="toast_positive_alertdialog_subir_favs">Datos subidos</string>
    <string name="btn_negative_alertdialog_subir_favs">No</string>
    <string name="toast_negative_alertdialog_subir_favs">Se canceló la acción</string>

    <string name="toast_btn_centrar_ubicacion">Calculando ubicación actual ...</string>
    <string name="toast_cambiar_mapa">Cargando nuevo mapa</string>

    <string name="marker_snippet_text">Categoría:\ </string>

    <string name="toast_calculando_ruta">Calculando ruta ...</string>

    <string name="toast_error_peticion_coinmap">Error en la petición a Coinmap:\ </string>
    <string name="toast_error_peticion_google">Error en la petición a Google:\ </string>

    <string name="toast_error_coordenadas_origen_null">Error, activa la localización</string>

    <!-- Layout activity_google_maps.xml -->

    <string name="btn_mapa_txt">MAPA</string>
    <string name="btn_cerca_txt">CERCA</string>
    <string name="btn_favs_txt">FAVORITOS</string>
    <string name="btn_kraken_txt">APIS</string>
    <string name="btn_all_txt">TODOS</string>

    <string name="cantidad1_tv">Cantidad:\ </string>
    <string name="cantidad2_tv">\ lugares</string>
    <string name="cantidad3_apis_tv">\ apis</string>

    <string name="cantidad2_cryptos_tv">\ criptomonedas</string>

    <string name="no_data_tv">No se ha configurado ninguna API de Kraken!</string>

    <string name="nombreRuta_tv">RUTA ACTUAL</string>
    <string name="distancia_tv">Distancia:\ </string>
    <string name="duracion_tv">Duración:\ </string>

    <!-- google_maps_menu.xml -->

    <string name="cambiar_mapa">Cambiar mapa</string>
    <string name="map_type_1">MAPA NOMRAL</string>
    <string name="map_type_2">MAPA SATELITE</string>
    <string name="map_type_3">MAPA HÍBRIDO</string>
    <string name="map_type_4">MAPA TERRENO</string>
    <string name="cambiar_año">Cambiar año creación</string>

    <string name="aboutUS">Acerca de</string>
    <string name="exit">Salir de la app</string>

    <!-- mostrar_balance_menu.xml -->

    <string name="cerrar_vista">Cerrar</string>


    <!-- PermissionUtils.java -->
    <string name="location_permission_denied">La app necesita permisos para usar la localización para mostrar los mapas de Google Maps.</string>
    <string name="permission_required_toast">El permiso de localización es necesario para esta app</string>
    <string name="permission_rationale_location">Se requiere acceso al servicio de ubicación para usar la función \'mi ubicación\', que muestra su ubicación actual en el mapa.</string>


    <!-- DialogFragmentVenueInfo.java -->
    <string name="call_Error_number">Número de teléfono NO válido</string>
    <string name="error_reading_data_from_arguments">NO se pudo cargar la información del sitio.</string>
    <string name="BTN_close">CERRAR</string>
    <string name="share_asunto">Este sitio admite pagos con criptomonedas!!!</string>


    <!-- Layout dialog_fragment_venue_info.xml -->
    <string name="hint_categoriaVenue"><u>Categoría:</u></string>
    <string name="hint_paisVenue"><u>País:</u></string>
    <string name="hint_dateCreationVenue"><u>Creado:</u></string>
    <string name="hint_dateUpdateVenue"><u>Actualizado:</u></string>


    <!-- MostrarBalanceActivity.java -->

    <!-- Layout activity_mostrar_balance.xml -->
    <string name="toolbar_title">BALANCE API</string>
    <string name="hint_searchview_crypto_type">Buscar criptomoneda por etiqueta</string>
    <string name="error_no_cryptos_tv">NO SE HA PODIDO CARGAR LOS DATOS</string>


    <!-- DialogFragmentNewExchangeAPI.java -->
    <string name="Input_Error_name">El nombre es demasiado largo.</string>
    <string name="Input_Error_key1">La clave API es demasiado corta</string>
    <string name="Input_Error_key2">La clave API es demasiado larga</string>
    <string name="Input_Error_secret1">La clave secreta es demasiado corta</string>
    <string name="Input_Error_secret2">La clave secreta es demasiado larga</string>

    <string name="error_reading_data_from_form_new_API">Comprueba los datos introducidos.</string>


    <!-- Layout DialogFragmentNewExchangeAPI.xml -->
    <string name="title_df_new_api">CREAR NUEVA API</string>
    <string name="BTN_crear">CREAR</string>
    <string name="hint_nombreAPI">Asigna un nombre</string>
    <string name="hint_keyAPI">Introduce la clave API</string>
    <string name="hint_secretAPI">Introduce la clave Secreta</string>


    <!-- DialogFragmentResetPassword.java -->
    <string name="Send_Password_Reset_Email">Comprueba tu correo para restablecer la contraseña</string>
    <string name="Error_Password_Reset_Email">No se pudo enviar el correo, comprueba la conexión a internet o intentalo más tarde</string>


    <!-- Layout dialog_fragment_reset_password.xml -->
    <string name="title_df_reset_psw">RESTABLECER CONTRASEÑA</string>
    <string name="BTN_reset">RESTABLECER</string>


    <!-- DialogFragmentFilterOptions.java -->

    <!-- Layout dialog_fragment_filter_options.xml -->

    <string name="title_df_filter">FILTRAR CATEGORÍA</string>
    <string name="checkbox_text_all">TODOS</string>
    <string name="BTN_apply_filter">APLICAR FILTRO</string>
    <string name="BTN_cancel_apply_filter" translatable="false">CANCELAR</string>


    <!-- DialogFragmentSingleChoiceYear.java -->
    <string name="year_title_txt">Selecciona un año</string>
    <string name="year_pos_txt">Ok</string>


    <!-- Layout dialog_fragment_single_choice_year.xml -->



    <!-- ExampleActivity.java -->

    <!-- Layout activity_example.xml -->

    <string name="toast_data_upload">Datos favs guardados correctamente</string>
    <string name="toast_data_download_error1">No hay una lista de favs</string>
    <string name="toast_data_download_error2">No hay datos</string>
    <string name="toast_data_download_error3">Se produjo un error al leer de Firebase</string>

    <string name="toast_data_upload_true">Datos descargados</string>
    <string name="toast_wait_location">Espere a obtener la ubicacion actual</string>


</resources>